# plg-reader

./: README.md  lol.txt  pyproject.toml  t  t.py
.github/workflows/: tests.yml
plg-reader/: _py_r.py  dt.py
plg_reader/: __init__.py  _py_r.py  dt.py
plg_reader/_python/: __init__.py  dat_cl.py  dt.py  file_parse_dt.py  file_parser.py  ir_builder.py  ir_builder_dt.py  ir_transformer.py  logic_builder.py  parse_file.py  raw_line_builder.py
plg_reader/_python/statement_parsers/: TODO.md  __init__.py  _helpers.py  assignment_parser.py  break_parser.py  class_parser.py  comment_parser.py  continue_parser.py  decorator_parser.py  def_parser.py  delete_parser.py  elif_else_parser.py  except_finally_parser.py  expr_statement_parser.py  for_parser.py  if_parser.py  import_parser.py  pass_parser.py  raise_parser.py  return_parser.py  try_parser.py  while_parser.py  with_parser.py
plg_reader/_python/statement_parsers/expressions_parser/: __init__.py  atoms.py  base.py  (+6 more)
plg_reader/_python_reader/: __init__.py  raw_line_builder.py  text_to_raw_tokens.py  text_to_tokens.py
plg_reader/_utils/: __init__.py  bynary_rw.py  clii.py
tests/: test_pyread.py  test_raw_line_builder.py
tests/python/: test_file_parser.py  test_line_builder.py  test_raw_line_builder.py
tests/python/ir/: conftest.py  test_assignments.py  test_build_api.py  test_classes.py  test_collections.py  test_comments.py  test_compile_files.py  test_control_flow.py  test_exceptions.py  test_expressions.py  test_forbidden.py  test_functions.py  test_imports.py  test_params.py
tests/utils/: test_bynary_rw.py
(+6 files in other folders)
